; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ac3enc.c_count_mantissa_bits_init.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ac3enc.c_count_mantissa_bits_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AC3_MAX_BLOCKS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ([16 x i32]*)* @count_mantissa_bits_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @count_mantissa_bits_init([16 x i32]* %0) #0 {
  %2 = alloca [16 x i32]*, align 8
  %3 = alloca i32, align 4
  store [16 x i32]* %0, [16 x i32]** %2, align 8
  %4 = load i32, i32* @AC3_MAX_BLOCKS, align 4
  %5 = zext i32 %4 to i64
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %32, %1
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @AC3_MAX_BLOCKS, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %35

10:                                               ; preds = %6
  %11 = load [16 x i32]*, [16 x i32]** %2, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds [16 x i32], [16 x i32]* %11, i64 %13
  %15 = getelementptr inbounds [16 x i32], [16 x i32]* %14, i64 0, i64 0
  %16 = call i32 @memset(i32* %15, i32 0, i32 64)
  %17 = load [16 x i32]*, [16 x i32]** %2, align 8
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds [16 x i32], [16 x i32]* %17, i64 %19
  %21 = getelementptr inbounds [16 x i32], [16 x i32]* %20, i64 0, i64 2
  store i32 2, i32* %21, align 4
  %22 = load [16 x i32]*, [16 x i32]** %2, align 8
  %23 = load i32, i32* %3, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds [16 x i32], [16 x i32]* %22, i64 %24
  %26 = getelementptr inbounds [16 x i32], [16 x i32]* %25, i64 0, i64 1
  store i32 2, i32* %26, align 4
  %27 = load [16 x i32]*, [16 x i32]** %2, align 8
  %28 = load i32, i32* %3, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds [16 x i32], [16 x i32]* %27, i64 %29
  %31 = getelementptr inbounds [16 x i32], [16 x i32]* %30, i64 0, i64 4
  store i32 1, i32* %31, align 4
  br label %32

32:                                               ; preds = %10
  %33 = load i32, i32* %3, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %3, align 4
  br label %6

35:                                               ; preds = %6
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
